added session component card with active and inactive session

--- a/_palette.scss
+++ b/_palette.scss
@@ -30,3 +30,8 @@ $focused-element: rgba($main-color-light,0.13);
 $background: #F8F8F8;
 $light-color: white;
 $border-radius: 5px;
+
+
+/*service providers*/
+$azr: #035BDA;
+$aws: #FF9900;
