--- a/src/app/session/session-card/session-card.component.scss
+++ b/src/app/session/session-card/session-card.component.scss
@@ -1,6 +1,5 @@
-.mycard {
-  position: relative;
-}
+@import "palette";
+
 .ssm-card {
   border-radius: 4px;
   background: white;
@@ -22,4 +21,112 @@
   margin: 0!important;
   overflow: auto;
   width: 100%;
+}
+
+.session-card {
+  width: 100%;
+  margin: 0;
+  padding: 10px;
+  background: $light-color;
+  text-align: left;
+  position: relative;
+  transition: all 0.4s ease;
+  color: $text-color;
+  border-radius: $border-radius;
+
+  .button-area {
+    a {
+      display: inline-block;
+      width: 27px;
+      height: 27px;
+      border-radius: 15px;
+      border: 1px solid white;
+      margin-left: 5px;
+      text-align: center;
+      vertical-align: middle;
+      cursor: pointer;
+    }
+
+    span {
+      cursor: pointer;
+    }
+
+    .drop-list {
+      position: absolute;
+      background: white;
+      box-shadow: 0 0 42px -14px rgba(0, 0, 0, 0.49);
+      border-radius: 4px;
+      width: 100%;
+      max-width: 200px;
+      z-index: 10;
+      cursor: pointer;
+    }
+
+    .drop-list a {
+      display: inline-block;
+      width: 100%;
+      padding: 5px 10px;
+      border-bottom: 1px solid #f9f9f9;
+      color: #707070;
+      transition: opacity 0.3s ease;
+      cursor: pointer;
+      border-radius: 0;
+      height: auto;
+      margin-left: 0;
+    }
+
+    .drop-list a:last-child {
+      border-bottom: none !important;
+    }
+
+    .drop-list a:hover {
+      opacity: 0.8;
+      background: $focused-element;
+      color:$text-color!important;
+    }
+
+    .drop-list:after {
+      position: absolute;
+      top: -5px;
+      right: 40px;
+      content: '';
+      width: 0;
+      height: 0;
+      border-left: 5px solid transparent;
+      border-right: 5px solid transparent;
+      border-bottom: 5px solid white;
+    }
+  }
+
+  .button-area-2 {
+
+    a {
+      display: inline-block;
+      width: 27px;
+      height: 27px;
+      border-radius: 15px;
+      border: 1px solid white;
+      margin-left: 5px;
+      text-align: center;
+      vertical-align: middle;
+      cursor: pointer;
+    }
+
+    span {
+      cursor: pointer;
+    }
+  }
+
+  span { font-size: 14px; color: #222222}
+  h1 { font-size: 20px; }
+  h3 { font-size: 12px; }
+  h4 { font-size: 10px; }
+
+}
+
+.session-card.aws {
+    border-left: 5px solid $aws;
+}
+.session-card.azr {
+  border-left: 5px solid $azr;
 }
