--- a/src/assets/scss/fonts.scss
+++ b/src/assets/scss/fonts.scss
@@ -7,3 +7,7 @@
   font-family: "AvenirNextBold";
   src: url("assets/fonts/AvenirNextLTPro-Bold.otf") format("opentype");
 }
+@font-face {
+  font-family: "AvenirNextDemiBold";
+  src: url("assets/fonts/AvenirNext-DemiBold.otf") format("opentype");
+}
