--- a/src/app/managing/create-account/create-account.component.html
+++ b/src/app/managing/create-account/create-account.component.html
@@ -1,114 +1,124 @@
 <div class="container-fluid">
-  <h1>Create Your First Account</h1>
-
   <form [formGroup]="form" class="form center-vertical text-left" (submit)="saveAccount();">
 
-    <div class="toggable {{toggleOpen ? 'opened' : 'closed'}}">
-      <div class="titable" title="Generals" (click)="$event.stopPropagation(); toggleOpen = !toggleOpen;"></div>
-      <div class="shrinkable">
+    <ng-container *ngIf="!providerSelected">
+      <h1>Prima di cominciare</h1>
+      <p>Collega subito il tuo primo account e comincia ad immergerti nel tuo lavoro.</p>
 
-        <div class="form-group" style="width: 100%; display: inline-block;">
-          <label>Account Alias<span class="danger-text">*</span></label>
-          <input formControlName="name" type="text" class="form-control" placeholder="Account Alias *">
-          <small class="text-error" *ngIf="(form.controls['name'].dirty || form.controls['name'].touched) && form.controls['name'].errors">Insert an Account Alias</small>
-        </div>
-
-        <ng-container *ngIf="accountType === eAccountType.AWS">
-          <div class="form-group" style="width: 100%; display: inline-block;">
-            <label>SSO Url<span class="danger-text">*</span></label>
-            <input formControlName="federationUrl" type="url" class="form-control" placeholder="single sign-on url *">
-            <small class="text-error" *ngIf="(form.controls['federationUrl'].dirty || form.controls['federationUrl'].touched) && form.controls['federationUrl'].errors">Insert the SSO url</small>
-          </div>
-        </ng-container>
-
-      </div>
-    </div>
-
-    <div class="toggable {{toggleOpen ? 'opened' : 'closed'}}">
-      <div class="titable" title="Account Details" (click)="$event.stopPropagation(); toggleOpen = !toggleOpen;"></div>
-      <div class="shrinkable">
-
-        <div class="form-group" style="width: 100%; display: inline-block;">
-          <label>Choose your account type<span class="danger-text">*</span></label>
-          <br>
-          <button type="button" class="account-type {{accountType === eAccountType.AWS ? 'selected' : ''}}" (click)="setAccountType(eAccountType.AWS);">AWS</button>
-          <button type="button" class="account-type {{accountType === eAccountType.AZURE ? 'selected' : ''}}" (click)="setAccountType(eAccountType.AZURE);">AZURE</button>
-        </div>
-
-
-        <ng-container *ngIf="accountType === eAccountType.AWS">
-          <div class="form-group" style="width: 49%; display: inline-block;">
-            <label>Account Number<span class="danger-text">*</span></label>
-            <input formControlName="accountNumber" type="text" class="form-control" placeholder="Account Number *">
-            <small class="text-error" *ngIf="(form.controls['accountNumber'].dirty || form.controls['accountNumber'].touched) && form.controls['accountNumber'].errors">Insert the Account Number</small>
-          </div>
-
-          <div style="width: 2%; height: 1px; display: inline-block;"></div>
-
-          <div class="form-group" style="width: 49%; display: inline-block;">
-            <label>Federated or truster?</label>
-            <ng-select formControlName="federatedOrTruster" bindLabel="type" bindValue="type" [items]="[{type: 'federated'}, {type: 'truster'}]" [(ngModel)]="selectedType" dropdownPosition="bottom" ></ng-select>
-          </div>
-
-          <div class="form-group" style="width: 100%; display: inline-block;" *ngIf="selectedType == 'federated'">
-            <label>IdP ARN<span class="danger-text">*</span></label>
-            <input formControlName="idpArn" type="text" class="form-control" placeholder="Idp Arn *" (blur)="setAccountNumber($event);">
-            <small class="text-error" *ngIf="(form.controls['idpArn'].dirty || form.controls['idpArn'].touched) && form.controls['idpArn'].errors">Insert the IdP ARN</small>
-          </div>
-
-          <div *ngIf="selectedType == 'truster'">
-
-            <div class="form-group" style="width: 49%; display: inline-block; position: relative; top: -1px;" >
-              <label style="margin-bottom: 0;">Federated Account<span class="danger-text">*</span> <i class="fa fa-question-circle" tooltip="This role is used to make AssumeRole on the Truster Account"></i></label>
-              <ng-select class="mt-2" formControlName="federatedAccount" bindLabel="accountName" bindValue="accountNumber" dropdownPosition="top" [items]="federatedAccounts" [(ngModel)]="selectedAccount" (change)="getFedRoles();" [disabled]="true"></ng-select>
-            </div>
-
-            <div style="width: 2%; height: 1px; display: inline-block;"></div>
-
-            <div class="form-group" style="width: 49%; display: inline-block; position: relative; top: -1px;">
-              <label style="margin-bottom: 0;">Federated Role<span class="danger-text">*</span> <i class="fa fa-question-circle" tooltip="This role is used to make AssumeRole on the Truster Account"></i></label>
-              <ng-select class="mt-2" formControlName="federatedRole" bindLabel="name" bindValue="name" dropdownPosition="top" [items]="federatedRoles" [(ngModel)]="selectedRole"></ng-select>
-            </div>
-
-          </div>
-        </ng-container>
-
-        <ng-container *ngIf="accountType === eAccountType.AZURE">
-          <div class="form-group" style="width: 100%; display: inline-block;">
-            <label>Subscription Id<span class="danger-text">*</span></label>
-            <input formControlName="subscriptionId" type="text" class="form-control" placeholder="Subscription Id *">
-            <small class="text-error" *ngIf="(form.controls['subscriptionId'].dirty || form.controls['subscriptionId'].touched) && form.controls['subscriptionId'].errors">Insert the Subscription Id</small>
-          </div>
-        </ng-container>
-
-      </div>
-    </div>
-
-    <ng-container *ngIf="accountType === eAccountType.AWS">
-      <div class="toggable {{!toggleOpen ? 'opened' : 'closed'}}">
-        <div class="titable" title="Role Details" (click)="$event.stopPropagation(); toggleOpen = !toggleOpen;"></div>
-        <div class="shrinkable">
-          <h1 style="margin-top: 10px;">Role names*</h1>
-          <label class="orange-color"><small>*The role name must coincide with the Role in the IAM section. Remember to
-            press <b>enter</b> to save the Role name.</small></label>
-
-          <div class="form-group" style="width: 100%; display: inline-block; position: relative; height: auto;">
-            <input #roleInput class="form-control" (keyup)="setRoleName($event);"
-                   placeholder="Write Role name here and press Enter" style="padding-right: 35px;"/>
-            <button type="button" (click)="setRoleName({ code: 'Enter'});"
-                    class="adder-btn {{ checkDisabled ? '' : 'disabled'}}"><i class="fa fa-plus"></i></button>
-            <ul>
-              <li *ngFor="let role of roles">
-                <span>{{role}} <i class="fa fa-times" (click)="removeRole(role);"></i></span>
-              </li>
-            </ul>
-          </div>
+      <div class="form-group" style="width: 100%; display: inline-block;">
+        <label>Choose your account type<span class="danger-text">*</span></label>
+        <br>
+        <div class="correct-top">
+        <button type="button" class="providers" (click)="setAccountType(eAccountType.AWS);"><img src="assets/images/aws-logo.svg" height="20"></button>
+        <button type="button" class="providers" (click)="setAccountType(eAccountType.AZURE);"><img src="assets/images/azure-logo.svg" height="20"></button>
         </div>
       </div>
     </ng-container>
 
-    <button type="button" (click)="saveAccount();" [disabled]="!formValid()" [ngClass]="!formValid() ? 'btn btn-default pull-right': 'btn btn-default btn-gradient pull-right'">Save</button>
+    <ng-container *ngIf="firstTime && accountType === eAccountType.AWS && !ssoInserted">
+      <h1>Prima di cominciare</h1>
+      <p>Collega subito il tuo primo account e comincia ad immergerti nel tuo lavoro.</p>
+
+      <div class="form-group" style="width: 100%; display: inline-block;">
+        <label>Choose your account type<span class="danger-text">*</span></label>
+        <br>
+        <a class="back" (click)="providerSelected = false; ssoInserted = false; accountType = undefined;"><i class="fa fa-chevron-left"></i></a>
+        <span class="providers extended"><img src="assets/images/aws-logo.svg" height="20"></span>
+        <br><br>
+        <label>SSO Url<span class="danger-text">*</span></label>
+        <input formControlName="federationUrl" type="url" class="form-control" placeholder="single sign-on url *">
+        <small class="text-error" *ngIf="(form.controls['federationUrl'].dirty || form.controls['federationUrl'].touched) && form.controls['federationUrl'].errors">Insert the SSO url</small>
+        <small class="note">*Questo passaggio è richiesto solo in fase di configurazione. Quando Cercherai di aggiungere un nuovo account non sarà più chiesto.</small>
+      </div>
+
+      <button type="button" class="pull-center" (click)="ssoInserted = true">Inizia Subito</button>
+    </ng-container>
+
+    <ng-container *ngIf="(providerSelected && accountType === eAccountType.AZURE) || (providerSelected && ssoInserted && accountType === eAccountType.AWS)">
+      <h1>Crea il tuo Account!</h1>
+      <p class="smaller">Figata. Ci siamo quasi. Inizia subito a lavorare. Crea il tuo account.</p>
+
+      <ng-container *ngIf="accountType === eAccountType.AWS">
+        <div class="form-group" style="width: 100%; display: inline-block;">
+          <label>Seleziona la tipologia di Account</label>
+          <br>
+          <div class="correct-top-second-step">
+            <button type="button" class="providers {{selectedType === 'federated' ? 'selected' : ''}}" (click)="selectedType = 'federated'">
+              <i class="fa fa-info" tooltip="This is a set of option to create federated accounts"></i> Federated
+            </button>
+            <button type="button" class="providers {{selectedType === 'truster' ? 'selected' : ''}}" (click)="selectedType = 'truster'" *ngIf="!firstTime">
+              <i class="fa fa-info" tooltip="This is a set of option to create truster accounts"></i> Truster
+            </button>
+            <span class="providers disabled second-step-fix" *ngIf="firstTime">
+            <i class="fa fa-info" tooltip="This is a set of option to create truster accounts"></i> Truster
+          </span>
+          </div>
+        </div>
+      </ng-container>
+
+      <div class="form-group" style="width: 100%; display: inline-block;">
+        <label>Account Alias<span class="danger-text">*</span></label>
+        <br>
+        <input formControlName="name" type="text" class="form-control" placeholder="Account Alias *">
+        <small class="text-error" *ngIf="(form.controls['name'].dirty || form.controls['name'].touched) && form.controls['name'].errors">Insert an Account Alias</small>
+      </div>
+
+      <ng-container *ngIf="accountType === eAccountType.AWS">
+        <!-- ====================== -->
+        <!-- AWS ACCOUNT PROPERTIES -->
+        <!-- ====================== -->
+        <div class="form-group" style="width: 100%; display: inline-block;">
+          <label>Account Number<span class="danger-text">*</span></label>
+          <input formControlName="accountNumber" type="text" class="form-control" placeholder="Account Number *">
+          <small class="text-error" *ngIf="(form.controls['accountNumber'].dirty || form.controls['accountNumber'].touched) && form.controls['accountNumber'].errors">Insert the Account Number</small>
+        </div>
+
+        <div class="form-group" style="width: 100%; display: inline-block;">
+          <label>Role<span class="danger-text">*</span></label>
+          <input formControlName="role" type="text" class="form-control" placeholder="Role name" />
+          <small class="text-error" *ngIf="(form.controls['role'].dirty || form.controls['role'].touched) && form.controls['role'].errors">Insert the Role</small>
+        </div>
+
+        <ng-container *ngIf="selectedType == 'federated'">
+          <h2>Federated setting</h2>
+          <div class="form-group" style="width: 100%; display: inline-block;">
+            <label>IdP ARN<span class="danger-text">*</span></label>
+            <input formControlName="idpArn" type="text" class="form-control" placeholder="Idp Arn *" (blur)="setAccountNumber($event);">
+            <small class="text-error" *ngIf="(form.controls['idpArn'].dirty || form.controls['idpArn'].touched) && form.controls['idpArn'].errors">Insert the IdP ARN</small>
+          </div>
+        </ng-container>
+
+        <ng-container *ngIf="selectedType == 'truster'">
+          <h2>Truster setting</h2>
+          <div class="form-group" style="width: 49%; display: inline-block; position: relative; top: -1px;" >
+            <label style="margin-bottom: 0;">Federated Account<span class="danger-text">*</span> <i class="fa fa-question-circle" tooltip="This role is used to make AssumeRole on the Truster Account"></i></label>
+            <ng-select class="mt-2" formControlName="federatedAccount" bindLabel="accountName" bindValue="accountNumber" dropdownPosition="top" [items]="federatedAccounts" [(ngModel)]="selectedAccount" (change)="getFedRoles();" [disabled]="true"></ng-select>
+          </div>
+
+          <div style="width: 2%; height: 1px; display: inline-block;"></div>
+
+          <div class="form-group" style="width: 49%; display: inline-block; position: relative; top: -1px;">
+            <label style="margin-bottom: 0;">Federated Role<span class="danger-text">*</span> <i class="fa fa-question-circle" tooltip="This role is used to make AssumeRole on the Truster Account"></i></label>
+            <ng-select class="mt-2" formControlName="federatedRole" bindLabel="name" bindValue="name" dropdownPosition="top" [items]="federatedRoles" [(ngModel)]="selectedRole"></ng-select>
+          </div>
+
+        </ng-container>
+      </ng-container>
+
+      <ng-container *ngIf="accountType === eAccountType.AZURE">
+        <!-- ====================== -->
+        <!-- AWS ACCOUNT PROPERTIES -->
+        <!-- ====================== -->
+        <div class="form-group" style="width: 100%; display: inline-block;">
+          <label>Subscription Id<span class="danger-text">*</span></label>
+          <input formControlName="subscriptionId" type="text" class="form-control" placeholder="Subscription Id *">
+          <small class="text-error" *ngIf="(form.controls['subscriptionId'].dirty || form.controls['subscriptionId'].touched) && form.controls['subscriptionId'].errors">Insert the Subscription Id</small>
+        </div>
+      </ng-container>
+
+      <a class="back-link pull-left" (click)="goBack();"><i class="fas fa-arrow-left"></i>&nbsp;back</a>
+      <button type="button" (click)="saveAccount();" [disabled]="!formValid()" [ngClass]="!formValid() ? 'pull-right disabled': 'pull-right'" *ngIf="selectedType">Save</button>
+    </ng-container>
 
   </form>
-
 </div>
