--- a/src/app/managing/edit-account/edit-account.component.scss
+++ b/src/app/managing/edit-account/edit-account.component.scss
@@ -186,6 +186,7 @@
   .back-link {
     text-decoration: none;
     color: $text-color;
+    cursor: pointer;
     i {
       position: relative;
       left: 0;
