--- a/src/app/session/session/session.component.html
+++ b/src/app/session/session/session.component.html
@@ -28,7 +28,7 @@
 </div>
 
 <div class="container-fluid with-scroll">
-
+  <span class="fixed-status">Status</span>
   <ul class="ssm-cards">
     <li *ngIf="activeSessions.length !== 0">
       <h3>Active Accounts</h3>
